Adding tailwindCSS and PostCSS

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "autoprefixer": "^10.1.0",
+    "gatsby-plugin-postcss": "^3.3.0",
+    "postcss": "^8.2.1",
+    "prettier": "2.1.2",
+    "tailwindcss": "^2.0.2"
   },
   "repository": {
     "type": "git",
